# RandomnessWinterSchool2026

./: AGENTS.md  Jones_Masanes_Table3_P[xyab].npy  README.md  dan.ipynb  dan_demo.ipynb  demo.py  demo_qkd.py  demo_randomness.py  pyproject.toml  quantum_constructor_example.py  requirements.txt
archive/: dan_demo_OLD.ipynb  randomness_mosek_fusion.py  simple_mosek_fusion.ipynb
contextualityqkd/: __init__.py  _ragged.py  contextuality.py  extremal_finders.py  linalg_utils.py  protocol.py  quantum.py  randomness.py  randomness_lp.py  scenario.py
contextualityqkd/demos/: __init__.py  qkd_cabello_18ray.py  qkd_hexagon_povm.py  qkd_hexagon_projective.py  qkd_peres_24ray.py  qkd_porac_3_2.py  qkd_qubit_xplusz_xminusz.py  qkd_qubit_z_x_xplusz.py  qkd_xz_ring.py  randomness_cabello_18ray.py  randomness_hexagon_povm.py  randomness_peres_24ray.py  randomness_qubit_xplusz_xminusz.py  randomness_qubit_z_x_xplusz.py  run_all.py
randomness_contextuality_lp/: __init__.py  contextuality.py  linalg_utils.py  quantum.py  quantum_constructor.py  randomness.py  randomness_scipy.py  scenario.py
tests/: test_linalg_utils.py  test_protocol_core.py  test_protocol_lp.py  test_scenario_3d.py
